force-app/main/default/objects/Internal_Finance_Approval_Request__c/Internal_Finance_Approval_Request__c.object-meta.xml
<CustomObject>
    <label>Internal Finance Request</label>
    <nameField>
        <displayFormat>IF-{00000}</displayFormat>
        <label>Internal Financing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Finance Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>