force-app/main/default/objects/Internal_Finance_Approval_Request__c/fields/Approved_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Approved_Payment_Type__c</fullName>
    <description>The payment type that is finally approved for the Internal Finance Request.</description>
    <inlineHelpText>The payment type finally approved for the Internal Finance Request.</inlineHelpText>
    <label>Approved Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Types</valueSetName>
    </valueSet>
</CustomField>