force-app/main/default/objects/Internal_Finance_Approval_Request__c/fields/Approved_Payment_Type_at_Submission__c.field-meta.xml
<CustomField>
    <fullName>Approved_Payment_Type_at_Submission__c</fullName>
    <label>Approved Payment Type on Submission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>