force-app/main/default/objects/Internal_Finance_Approval_Request__c/fields/Auto_Approved__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added as part of GTMS-23392, to track if a record is auto approved or not</description>
    <label>Auto Approved</label>
    <type>Checkbox</type>
</CustomField>