force-app/main/default/objects/Internal_Finance_Approval_Request__c/fields/Auto_Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approved_Amount__c</fullName>
    <description>Amount of credit limit increase that was auto-approved</description>
    <inlineHelpText>The amount of credit limit increase that was automatically approved by the system</inlineHelpText>
    <label>Auto Approved Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>