force-app/main/default/objects/Internal_Finance_Approval_Request__c/fields/Emailed_Deal_Desk__c.field-meta.xml
<CustomField>
    <fullName>Emailed_Deal_Desk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be updated when rep submits a deal to Deal Desk for 3PF using “Apply to Deal Desk“ button on opportunity.</description>
    <label>Emailed Deal Desk</label>
    <type>Checkbox</type>
</CustomField>