force-app/main/default/objects/Internal_Finance_Approval_Request__c/fields/Finance_Comments__c.field-meta.xml
<CustomField>
    <fullName>Finance_Comments__c</fullName>
    <label>Finance Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>