force-app/main/default/objects/Internal_Finance_Approval_Request__c/fields/Finance_Partner_Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Finance_Partner_Quote_Status__c</fullName>
    <description>GTMS-9980</description>
    <label>Finance Partner Quote Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>