force-app/main/default/objects/Internal_Finance_Approval_Request__c/fields/Finance_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Finance_Response_Date__c</fullName>
    <label>Finance Response Date</label>
    <type>DateTime</type>
</CustomField>