force-app/main/default/objects/Internal_Finance_Approval_Request__c/fields/IF_Finance_Comments__c.field-meta.xml
<CustomField>
    <fullName>IF_Finance_Comments__c</fullName>
    <description>For Finance Use Only</description>
    <inlineHelpText>Internal Notes - Not visible to AEs</inlineHelpText>
    <label>IF Finance Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>