force-app/main/default/objects/Internal_Finance_Approval_Request__c/fields/IF_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>IF_Response_Date__c</fullName>
    <description>GTMS-16798: for monthly expiration logic</description>
    <formula>DATEVALUE(Finance_Response_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IF Response Date</label>
    <type>Date</type>
</CustomField>