force-app/main/default/objects/Internal_Finance_Approval_Request__c/fields/isSalesDirector__c.field-meta.xml
<CustomField>
    <fullName>isSalesDirector__c</fullName>
    <formula>AND(
    TEXT(Request_Type__c) = &apos;Change in Payment Type&apos;,
   OR(CONTAINS(UPPER(Approver__r.UserRole.Name), &apos;DIRECTOR&apos;),CONTAINS(UPPER(Approver__r.UserRole.Name), &apos;ISD&apos;))
)</formula>
    <label>isSalesDirector</label>
    <type>Checkbox</type>
</CustomField>