force-app/main/default/objects/Internal_Finance_Approval_Request__c/fields/Monthly_Credit_on_Submission__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Credit_on_Submission__c</fullName>
    <label>Monthly Credit on Submission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>