force-app/main/default/objects/Internal_Finance_Approval_Request__c/fields/New_Monthly_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>New_Monthly_Credit_Limit__c</fullName>
    <label>New Monthly Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>