force-app/main/default/objects/Internal_Finance_Approval_Request__c/fields/Notes_from_Requester__c.field-meta.xml
<CustomField>
    <fullName>Notes_from_Requester__c</fullName>
    <label>Notes from Requester</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>