force-app/main/default/objects/Internal_Finance_Approval_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be updated when rep submits a deal to Deal Desk for 3PF using “Apply to Deal Desk“ button on opportunity.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Internal Finance Requests</relationshipLabel>
    <relationshipName>Internal_Finance_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>