force-app/main/default/objects/Internal_Finance_Approval_Request__c/fields/Payment_Terms_Opportunity_only_Exception__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Opportunity_only_Exception__c</fullName>
    <formula>Opportunity__r.Payment_Terms_Opportunity_only_exception__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Terms Opportunity only Exception</label>
    <type>Checkbox</type>
</CustomField>