force-app/main/default/objects/Internal_Finance_Approval_Request__c/fields/Payment_Type_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type_Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Need More Information</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Pending Credit Review</fullName>
            </value>
            <value>
                <fullName>Pending Customer Documentation</fullName>
            </value>
            <value>
                <fullName>Reviewing Documentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>