force-app/main/default/objects/Internal_Finance_Approval_Request__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Internal Finance Requests</relationshipLabel>
    <relationshipName>Internal_Finance_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>