force-app/main/default/objects/Internal_Finance_Approval_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Change in Payment Terms</fullName>
            </value>
            <value>
                <fullName>Change in Payment Type</fullName>
            </value>
            <value>
                <fullName>Credit Limit Increase</fullName>
            </value>
            <value>
                <fullName>Custom Billing Request</fullName>
            </value>
            <value>
                <fullName>Direct Monthly Financing</fullName>
                <default>true</default>
                <label>Direct Monthly Financing</label>
            </value>
            <value>
                <fullName>Direct Quarterly Financing</fullName>
            </value>
            <value>
                <fullName>Direct Semi-Annual Financing</fullName>
            </value>
            <value>
                <fullName>Upfront Credit Limit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>