force-app/main/default/objects/Internal_Finance_Approval_Request__c/fields/Requested_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Requested_Payment_Terms__c</fullName>
    <label>Requested Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Due in advance</fullName>
            </value>
            <value>
                <fullName>Due on Contract Start</fullName>
            </value>
            <value>
                <fullName>Net 10</fullName>
            </value>
            <value>
                <fullName>Net 120</fullName>
            </value>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 150</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 5</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Net 65</fullName>
            </value>
            <value>
                <fullName>Net 75</fullName>
            </value>
            <value>
                <fullName>Net 90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>