force-app/main/default/objects/Internal_Finance_Approval_Request__c/fields/Requested_Payment_Types__c.field-meta.xml
<CustomField>
    <fullName>Requested_Payment_Types__c</fullName>
    <description>The payment types requested by user. It can have multiple values separated by &apos;;&apos;</description>
    <label>Requested Payment Types</label>
    <type>TextArea</type>
</CustomField>