force-app/main/default/objects/Internal_Finance_Approval_Request__c/fields/Submitter__c.field-meta.xml
<CustomField>
    <fullName>Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Internal_Finance_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>