force-app/main/default/objects/Internal_Finance_Approval_Request__c/fields/Upfront_Channel_Limit_On_Submission__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Channel_Limit_On_Submission__c</fullName>
    <label>Upfront Channel Limit on Submission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>